--- a/TinDog-Bootstrap/css/styles.css
+++ b/TinDog-Bootstrap/css/styles.css
@@ -1,27 +1,15 @@
 body {
     font-family: 'Montserrat';
+    text-align: center;
 }
 
-#title {
-    background-color: #ff4c68;
-    color: #fff;
-}
-
-h1 {
-    font-family: 'Montserrat';
-    font-size: 3.5rem;
-    line-height: 1.5;
-    font-weight: bold;
-}
-
-h3 {
+h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat';
     font-weight: bold;
+
 }
 
 h2 {
-    font-family: 'Montserrat';
-    font-weight: bold;
     font-size: 2rem;
     line-height: 1.5;
 }
@@ -30,8 +18,28 @@ p {
     color: #afafaf;
 }
 
+/* Headings */
+
+.big-heading {
+    font-family: 'Montserrat';
+    font-size: 3.5rem;
+    line-height: 1.5;
+    font-weight: bold;
+}
+
+.section-heading {
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+#title {
+    background-color: #ff4c68;
+    color: #fff;
+    text-align: left;
+}
+
 .container-fluid {
-    padding: 3% 15% 7%;
+    padding: 7% 15%;
 }
 
 /* Navigation Bar */
@@ -74,14 +82,16 @@ p {
 /* Features Section */
 
 #features {
-    padding: 7% 15%;
     background-color: #fff;
     position: relative;
     z-index: 1;
 }
 
+.feature-title {
+    font-size: 1.5rem;
+}
+
 .feature-box {
-    text-align: center;
     padding: 5%;
 }
 
@@ -97,7 +107,6 @@ p {
 /* Testimonial Section */
 
 #testimonials {
-    text-align: center;
     background-color: #ef8172;
     color: #fff;
 }
@@ -108,13 +117,13 @@ p {
     margin: 20px;
 }
 
-.carousel-item {
-    padding: 7% 15%;
+.testimonial-text {
+    font-size: 2rem;
+    line-height: 1.5;
 }
 
 #press {
     background-color: #ef8172;
-    text-align: center;
     padding-bottom: 3%;
 }
 
@@ -127,7 +136,11 @@ p {
 
 #pricing {
     padding: 100px;
-    text-align: center;
+}
+
+.price-text {
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
 .pricing-column {
@@ -139,8 +152,6 @@ p {
 #cta {
     background-color: #ff4c68;
     color: #fff;
-    padding: 7% 15%;
-    text-align: center;
 }
 
 .cta-heading {
@@ -151,11 +162,6 @@ p {
 }
 
 /* Footer Section */
-
-#footer {
-    padding: 7% 15%;
-    text-align: center;
-}
 
 .social-icon {
     margin: 20px 10px;
